checagem campo vazio + Log.e

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/txt_hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Digite seu nome!"
+        android:text="Digite seu nome: "
         android:textSize="20dp"
         android:layout_centerInParent="true"/>
 
